[metadata]
project_urls =
    Documentation = https://mitogen.networkgenomics.com/
    Source = https://github.com/mitogen-hq/mitogen
    Tracker = https://github.com/mitogen-hq/mitogen/issues

[bdist_wheel]
universal=1

[coverage:run]
branch = true
source =
    ansible_mitogen
    mitogen
omit =
    ansible_mitogen/compat/
    ansible_mitogen/compat/**
    ansible_mitogen/compat/*
    mitogen/compat/*

[flake8]
ignore = E402,E128,W503,E731
exclude =
    ansible_mitogen/compat/*
    mitogen/compat
